<resources>
    <string name="app_name">Counter</string>
    <string name="_6_point">+6 Point</string>
    <string name="_0">0</string>
    <string name="team_a">Team A</string>
    <string name="_4_point">+4 Point</string>
    <string name="_3_point">+3 Point</string>
    <string name="_2_point">+2 Point</string>
    <string name="_1_run">+1 Point</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>
