<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/AllScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginTop="16dp"
                android:fontFamily="@font/medievalsharp"
                android:gravity="center_vertical|center|top"
                android:text="@string/team_a"
                android:textAllCaps="true"
                android:textColor="@android:color/white"

                android:textSize="24sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center|top"
                android:layout_marginTop="16dp"
                android:text="@string/_0"
                android:textColor="@android:color/white"


                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="sixPointsTeamA"


                android:text="@string/_6_point"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="fourPointsTeamA"


                android:text="@string/_4_point"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="threePoints"


                android:text="@string/_3_point"
                android:textSize="20sp" />

            <Button
                android:id="@+id/twoPoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="twoPoint"

                android:text="@string/_2_point"
                android:textSize="20sp" />


            <Button
                android:id="@+id/free"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:onClick="oneRunTeamA"
                android:text="@string/_1_run"
                android:textSize="20sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:background="@android:color/black">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginTop="16dp"
                android:fontFamily="@font/medievalsharp"
                android:gravity="center_vertical|center|top"
                android:text="@string/team_b"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center|top"
                android:layout_marginTop="16dp"
                android:text="@string/_0"
                android:textColor="@android:color/white"

                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="sixPointsTeamB"


                android:text="@string/_6_point"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="fourPointsTeamB"


                android:text="@string/_4_point"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="threePointsTeamB"

                android:text="@string/_3_point"
                android:textSize="20sp" />

            <Button
                android:id="@+id/twoPointTeamB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"

                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="twoPointTeamB"

                android:text="@string/_2_point"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:onClick="oneRunTeamB"

                android:text="@string/_1_run"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"

            android:onClick="ResetScore"
            android:text="@string/reset"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>